--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
@@ -32,4 +33,12 @@ code {
     Consolas,
     'Courier New',
     monospace;
+}
+
+.container {
+  width: 90%;
+  max-width: 1400px;
+  margin: 50px auto;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
 }
